--- a/paciente_hora.html
+++ b/paciente_hora.html
@@ -186,29 +186,29 @@
                                     <div class="col-sm-6" id="paciente-form">
                                         <form>
                                             <div class="form-group">
-                                                <label for="contact-name">Fecha Control</label>
+                                                <label for="fecha_consulta">Fecha Control</label>
 
 
                                                 <input type="text" class="form-control" id="fecha_consulta" placeholder="DD-MM-AAAA">
                                             </div>
                                             <div class="form-group">
-                                                <label for="contact-email">Especialidad</label>
+                                                <label for="especialidad">Especialidad</label>
                                                 <input type="text" class="form-control" id="especialidad" placeholder="">
                                             </div>
 
                                             <div class="form-group">
-                                                <label for="contact-email">Médico</label>
+                                                <label for="medico">Médico</label>
                                                 <input type="text" class="form-control" id="medico" placeholder="">
                                             </div>
 
                                             <div class="form-group">
-                                                <label for="contact-email">Previsión</label>
+                                                <label for="prevision">Previsión</label>
                                                 <input type="text" class="form-control" id="prevision" placeholder="DD-MM-AAAA">
                                             </div>
 
 
                                             <div class="form-group">
-                                                <label for="contact-email">Consulta</label>
+                                                <label for="consulta">Consulta</label>
                                                 <input type="text" class="form-control" id="consulta" placeholder="">
                                             </div>
 
