--- a/paciente_tratamiento.html
+++ b/paciente_tratamiento.html
@@ -74,6 +74,9 @@
                         <a class="dropdown-item scroll-trigger" href="paciente_hora.html">
                           Registro Hora Médica
                     </a>
+                        <a class="dropdown-item scroll-trigger" href="pacientes.html">
+                            Perfil Paciente
+                           </a>
 
                 </li>
                 <li class="nav-item">
