--- a/paciente_examen.html
+++ b/paciente_examen.html
@@ -70,6 +70,9 @@
                         <a class="dropdown-item scroll-trigger" href="paciente_hora.html">
                           Registro Hora Médica
                     </a>
+                        <a class="dropdown-item scroll-trigger" href="pacientes.html">
+                            Perfil Paciente
+                           </a>
                         <li class="nav-item">
                             <a class="nav-link scroll-trigger" href="index.html">
                       Cerrar sesión 
