se modifica paciente_hora y se agrega disponibilidad

--- a/paciente_hora.html
+++ b/paciente_hora.html
@@ -88,7 +88,9 @@
                     <div class="col-sm-6" id="contact-form">
                         <h1>Toma de horas médicas, Rosa Jara</h1>
                     </div>
-                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalT">Solicitar hora</a></p></button> </a>
+                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalT">Solicitar hora</a></button>
+
+             <a href="/disponibilidad.html">Ver disponibilidad de horas</a>
                 </div>
             </div>
         </div>
