--- a/paciente_hora.html
+++ b/paciente_hora.html
@@ -99,7 +99,7 @@
                     </div>
                     <button type="button" class="btn btn-success" data-toggle="modal" data-target="#ModalT">Solicitar hora</a></button>
 
-             <a href="/disponibilidad.html">Ver disponibilidad de horas</a>
+             <a href="disponibilidad.html">Ver disponibilidad de horas</a>
                 </div>
             </div>
         </div>
